Fixed CVE-2024-3568 and pinned importlib-metadata 6.*

--- a/transformers-4.17/meta.yaml
+++ b/transformers-4.17/meta.yaml
@@ -11,6 +11,7 @@ source:
   patches:
     - 0001-Use-mkstemp-to-replace-deprecated-mktemp.patch
     - 0002-PR27776.patch
+    - 0001-Backported-CVE-2024-3568.patch
 
 build:
   noarch: python
@@ -36,7 +37,7 @@ requirements:
     - tqdm {{ tqdm }}
     - packaging
     - huggingface_hub
-    - importlib_metadata
+    - importlib_metadata 6.*
 
 test:
   imports:
